--- a/src/views/Home/LandingSection/LandingSection.module.scss
+++ b/src/views/Home/LandingSection/LandingSection.module.scss
@@ -36,7 +36,6 @@
 
   @media (max-width: $desktops) {
     height: calc(65vh - 7.6rem);
-    margin-bottom: $section-spacing-small-devices;
 
     &__imageContainer {
       height: 100%;
