--- a/src/views/Home/WhyChooseUs/WhyChooseUs.module.scss
+++ b/src/views/Home/WhyChooseUs/WhyChooseUs.module.scss
@@ -24,8 +24,6 @@
   }
 
   @media (max-width: $desktops) {
-    margin-bottom: $section-spacing-small-devices;
-
     &__header {
       margin-bottom: 0;
 
